modify addtype feture